/*
 * Copyright (C) 2015 - 2016 Red Bull Media House GmbH <http://www.redbullmediahouse.com> - all rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.rbmhtechnology.eventuate.serializer";
option optimize_for = SPEED;

import "CommonFormats.proto";
import "DurableEventFormats.proto";
import "ReplicationFilterFormats.proto";

message ApplicationVersionFormat {
  required int32 major = 1;
  required int32 minor = 2;
}

message LogInfoFormat {
  required string logName = 1;
  required int64 sequenceNr = 2;
}

message ReplicationEndpointInfoFormat {
  required string endpointId = 1;
  repeated LogInfoFormat logInfos = 2;
}

message GetReplicationEndpointInfoFormat {
  // no fields
}

message GetReplicationEndpointInfoSuccessFormat {
  required ReplicationEndpointInfoFormat info = 1;
}

message SynchronizeReplicationProgressFormat {
  optional ReplicationEndpointInfoFormat info = 1;
}

message SynchronizeReplicationProgressSuccessFormat {
  optional ReplicationEndpointInfoFormat info = 1;
}

message SynchronizeReplicationProgressFailureFormat {
  optional PayloadFormat cause = 1;
}

message SynchronizeReplicationProgressSourceExceptionFormat {
  optional string causeMessage = 1;
}

message ReplicationReadEnvelopeFormat {
  optional ReplicationReadFormat payload = 1;
  optional string logName = 2;
  optional string targetApplicationName = 3;
  optional ApplicationVersionFormat targetApplicationVersion = 4;
}

message ReplicationReadFormat {
  optional int64 fromSequenceNr = 1;
  optional int32 max = 2;
  optional int32 scanLimit = 3;
  optional ReplicationFilterTreeFormat filter = 4;
  optional string targetLogId = 5;
  optional string replicator = 6;
  optional VectorTimeFormat currentTargetVersionVector = 7;
}

message ReplicationReadSuccessFormat {
  repeated DurableEventFormat events = 1;
  optional int64 fromSequenceNr = 2;
  optional int64 replicationProgress = 3;
  optional string targetLogId = 4;
  optional VectorTimeFormat currentSourceVersionVector = 5;
}

message ReplicationReadFailureFormat {
  optional PayloadFormat cause = 1;
  optional string targetLogId = 2;
}

message ReplicationReadSourceExceptionFormat {
  optional string message = 1;
}

message IncompatibleApplicationVersionExceptionFormat {
  optional string sourceEndpointId = 1;
  optional ApplicationVersionFormat sourceApplicationVersion = 2;
  optional ApplicationVersionFormat targetApplicationVersion = 3;
}

message ReplicationDueFormat {
  // no fields
}
